horizontal scroll fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+html {
+  overflow-x: hidden;
+}
+
 body {
   background: #ffffff;
   color: #ffffff;
@@ -25,6 +29,7 @@ body {
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
+  position: relative;
 }
 
 h1,
